--- a/protos/sources/data-node/grpc-rest-bindings.yml
+++ b/protos/sources/data-node/grpc-rest-bindings.yml
@@ -207,6 +207,8 @@ http:
       get: "/api/v2/games"
     - selector: datanode.api.v2.TradingDataService.ListPartyMarginModes
       get: "/api/v2/margin-modes"
+    - selector: datanode.api.v2.TradingDataService.ListAMMPools
+      get: "/api/v2/amm-pools"
 
     # websockets
 
